# cloud_analyzer

./: .gitignore  .pylintrc  AZURE_COST_OPTIMIZATION_PLAN.md  AZURE_IMPLEMENTATION.md  AZURE_METRICS_IMPLEMENTATION_SUMMARY.md  AZURE_RESOURCE_COVERAGE.md  CLAUDE.md  CLEAN_CODE_IMPROVEMENTS_APPLIED.md  CLEAN_CODE_REVIEW.md  DEFECTS_FIXED.md  FLYWHEEL_USAGE.md  IMPLEMENTATION_SUMMARY.md  README.md  README_AZURE_METRICS.md  fix_imports.py  flywheel_prompt_plan.yaml  prompt_plan.md  run_azure_checks.py
cloud_analyzer.backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  setup.py  setup.sh
cloud_analyzer.cli/: .gitignore  __init__.py  cloud-analyzer  fix_test_imports.py  fix_test_model_imports.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
cloud_analyzer.cli/docs/: REFACTORING_SUMMARY.md
cloud_analyzer.cli/scripts/: run_clean_analyze.py  run_e2e_tests.sh
cloud_analyzer.cli/src/: cli_constants.py  main.py
cloud_analyzer.cli/src/commands/: __init__.py  analyze.py  analyze_helpers.py  auth_helpers.py  auth_status.py  configure.py  list_checks.py  metrics.py  report.py  run_check.py  setup_db.py
cloud_analyzer.cli/src/formatters/: __init__.py  check_results.py
cloud_analyzer.cli/src/utils/: __init__.py  cloud_identity.py  config.py
cloud_analyzer.cli/tests/: README_BDD.md  conftest.py  pytest.ini  test_clean_commands.py  test_output_file.py
cloud_analyzer.cli/tests/cli/: __init__.py  test_analyze.py  test_analyze_bdd.py  test_analyze_helpers.py  test_config_utils.py  test_configure.py  test_configure_bdd.py  test_formatters.py  test_helpers_bdd.py  test_list_checks.py  test_list_checks_bdd.py  test_main.py  test_main_bdd.py  test_report.py  test_report_bdd.py  test_run_check_new.py
cloud_analyzer.cli/tests/e2e/: __init__.py  test_full_workflow_integration.py  test_new_checks_e2e.py  test_real_provider_e2e.py  test_simple_check.py
cloud_analyzer.cli/tests/features/cli/: analyze.feature  configure.feature  helpers.feature  list_checks.feature  main.feature  report.feature
cloud_analyzer.common/: AZURE_METRICS_IMPLEMENTATION.md  CLEAN_CODE_REVIEW.md  COMPREHENSIVE_EVALUATION.md  COMPUTE_COVERAGE_ANALYSIS.md  DATABASE_COVERAGE_ANALYSIS.md  DEFECTS_FIXED.md  README.md  __init__.py  pyproject.toml  requirements-azure.txt  requirements.txt  setup.py
cloud_analyzer.common/src/: __init__.py  constants.py
cloud_analyzer.common/src/auth/: __init__.py  aws.py  azure.py  base.py  gcp.py  manager.py
cloud_analyzer.common/src/azure/: __init__.py
cloud_analyzer.common/src/azure/common/: validators.py
cloud_analyzer.common/src/azure/compute/: MISSING_IMPLEMENTATIONS.md  README.md  __init__.py  app_services.py  base.py  client.py  example.py  virtual_machines.py  vm_scale_sets.py
cloud_analyzer.common/src/azure/database/: README.md  __init__.py  base.py  client.py  constants.py  example.py  mysql.py  postgresql.py  sql_database.py
cloud_analyzer.common/src/checks/: __init__.py  base.py  register_checks.py  registry.py
cloud_analyzer.common/src/checks/azure/: sql_backup_retention.py  sql_elastic_pools.py  sql_geo_replication.py  sql_idle_databases.py  sql_serverless_tier.py  storage_lifecycle.py  storage_logging.py  storage_premium.py  storage_redundancy.py  storage_unused.py  vm_deallocated.py  vm_hybrid_benefit.py  vm_reserved_instances.py  vm_right_sizing.py  vm_spot_instances.py
cloud_analyzer.common/src/checks/compute/: __init__.py  idle_instances.py  right_sizing.py
cloud_analyzer.common/src/checks/cost_optimization/: __init__.py  reserved_instances.py  savings_plans.py
cloud_analyzer.common/src/checks/database/: __init__.py  database_sizing.py
cloud_analyzer.common/src/checks/storage/: __init__.py  old_snapshots.py  unattached_volumes.py
cloud_analyzer.common/src/database/: __init__.py  connection.py  models.py  repository.py
cloud_analyzer.common/src/models/: __init__.py  base.py  checks.py  metrics.py  recommendations.py
cloud_analyzer.common/src/providers/: __init__.py  azure.py  base.py
cloud_analyzer.common/src/services/: __init__.py  metrics_collector.py  resource_discovery.py
cloud_analyzer.common/src/validation/: __init__.py  metrics_validator.py  resource_validator.py
cloud_analyzer.common/tests/: __init__.py  test_checks_integration.py
cloud_analyzer.common/tests/azure/: __init__.py
cloud_analyzer.common/tests/azure/compute/: __init__.py  test_compute_wrapper.py
cloud_analyzer.common/tests/azure/database/: __init__.py  test_base.py  test_client.py  test_simple.py  test_sql_database.py  test_wrapper_mocked.py
cloud_analyzer.common/tests/checks/: __init__.py
cloud_analyzer.common/tests/checks/cost_optimization/: __init__.py  test_reserved_instances.py  test_savings_plans.py
cloud_analyzer.common/tests/checks/database/: __init__.py  test_database_sizing.py
cloud_analyzer.common/tests/checks/storage/: __init__.py  test_old_snapshots.py  test_unattached_volumes.py
cloud_analyzer.docs/: CHECKS.md  PRODUCT_SPEC.md  README.md  TECHNICAL_SPEC.md
cloud_analyzer.frontend/: components.d.ts  vite.config.ts
config/: config.yaml  resource_types.yaml
flywheel_specialized_plans/: container_optimization.yaml  cosmos_db_optimization.yaml  (+1 more)
migrations/: init.sql
(+3 files in other folders)
